# nbdev-hello-world

./: README.md  core.html  core.html.md  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: deploy.yaml  test.yaml
nbdev_hello_world/: _modidx.py  core.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml  sidebar.yml
