[tool.poetry]
name = "nbdev-hello-world"
version = "0.1.0"
description = ""
authors = ["Sean <sean.mckee@colorado.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.3.4"
nbdev = "^2.3.34"
jupyterlab-quarto = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
